# VoiceSnippets

./: CHANGELOG.md  README.md  app-signing.md  getting-started.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-versions.cjs
src/: App.tsx  index.css  overlay.css  overlay.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_detection.rs  github.rs  lib.rs  main.rs  matcher.rs  packs.rs  settings.rs  snippets.rs  sync.rs  tray.rs
src-tauri/src/commands/: app.rs  audio.rs  mod.rs  models.rs  permissions.rs  settings.rs  snippets.rs  sync.rs
src-tauri/src/managers/: audio.rs  model.rs  transcription.rs
src/components/: AboutTab.tsx  AnalyticsTab.tsx  AppSelector.tsx  CommandsTab.tsx  CustomWordsTab.tsx  ErrorBoundary.tsx  GeneralTab.tsx  InlineKeyboardShortcutSelector.tsx  KeyboardShortcutSelector.tsx  MainContent.tsx  Overlay.tsx  PermissionsScreen.tsx  SettingItem.tsx  ShortcutInput.tsx  Sidebar.tsx  SyncTab.tsx  WelcomeScreen.tsx  WorkflowEditor.tsx
src/components/commands/: CommandForm.tsx  CommandPacksList.tsx  CommandTypeSelector.tsx  CommandsHeader.tsx  CommandsList.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx
src/hooks/: useAppVersion.ts  useOverlayScrollbars.ts
src/lib/: keyboard-utils.ts  update-checker.ts
src/models/: AppFilter.ts  Tab.ts  index.ts
