[package]
name = "voicesnippets"
version = "0.7.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voicesnippets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
tokio = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
strsim = "0.11"
cpal = "0.16"
hound = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
transcribe-rs = { version = "0.2", features = ["whisper"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-macos-permissions = "2.3.0"
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
tauri-plugin-macos-permissions = "2.3.0"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2.7"
objc-foundation = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

